# talent-plan-projects

./: .gitignore  README.md
covid/: Cargo.toml  README.md
covid/assets/: covid-19-infections-20200422.csv
covid/src/: main.rs
exercises/io-and-collections/: Cargo.toml  README.md
exercises/learning-serde/: Cargo.toml  README.md
exercises/learning-serde/src/: main.rs
exercises/src/: main.rs
gitc/: Cargo.toml  README.md
gitc/src/: cli.yml  main.rs
miao/: Cargo.toml
miao/src/: main.rs
nomicon/: Cargo.toml
nomicon/src/: lib.rs
nomicon/src/collections/: vec.rs
nomicon/src/sync/: mod.rs
tinkv/: Cargo.toml  README.md
tinkv/src/: kvstore.rs  lib.rs
tinkv/src/tests/: tests.rs
tinkv/tests/: tests.rs
