[package]
name = "covid"
version = "0.1.0"
authors = ["0xE8551CCB <noti@ifaceless.space>"]
edition = "2018"
description = "A handful cli to query covid-19 infections in the world."
keywords = ["COVID-19"]
categories = ["Development"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
csv = "1.1.3"
serde = {version = "1.0.106", features = ["derive"]}
anyhow = "1.0.28"
