[package]
name = "gitc"
version = "0.1.0"
authors = ["0xE8551CCB"]
edition = "2018"
description = "Generate elegant and uniform git commit message for you."
license = "MIT"
repository = "https://github.com/ifaceless/talent-plan-projects/gitc"
readme = "README.md"
keywords = ["git", "commit message"]
categories = ["Development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.0", features = ["yaml"]}
maplit = "1.0.2"
lazy_static = "1.4.0"
yaml-rust = "0.3.5"
