[package]
name = "tinkv"
version = "0.2.0"
authors = ["0xE8551CCB <noti@ifaceless.space>"]
edition = "2018"
description = "A simple key-value store"
keywords = ["database", "key-value"]
categories = ["Development"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
structopt = "0.3.13"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
